[package]
name = "pokers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
rascii_art = "0.4.5"
reqwest = "0.12.7"
rustemon = { version = "3.5.0", default-features = false, features = [
  "in-memory-cache",
] }
tempdir = "0.3.7"
tokio = { version = "1.40.0", features = ["full"] }
